# exzing-energyx

./: .gitignore  LICENSE  README.md  arch.md  azure.yaml  create_issues.sh  notes.md  openapi.yaml  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/wokflows/: ci-cd.yml
.github/workflows/: ci-cd.yml
backend/: database.py  main.py  models.py  requirements.txt  schemas.py
backend/api/: Dockerfile  README.md  openapi.yaml  pyproject.toml
backend/api/energyx/: app.py  models.py  routes.py
backend/api/tests/: conftest.py
backend/routers/: credits.py  devices.py  emissions.py
backend/tests/: test_api.py
docs/: architecture.md  roadmap.md
frontend/web/: index.html  package-lock.json  package.json  vite.config.ts
frontend/web/src/: App.css  App.tsx  index.css  index.tsx
frontend/web/src/actions/: common.ts  itemActions.ts  listActions.ts
frontend/web/src/components/: carbonMetricsPanel.tsx  carbonMetricsPanelAI.tsx  energyxContext.ts  energyxItemDetailPane.tsx  energyxItemListPane.tsx  energyxListMenu.tsx  vesselStatusPanel.tsx  vesselStatusPanelAI.tsx
frontend/web/src/hooks/: useIsMobile.ts
frontend/web/src/layout/: header.tsx  layout.tsx  sidebar.tsx
frontend/web/src/models/: applicationState.ts  energyxItem.ts  energyxList.ts  index.ts
frontend/web/src/pages/: dashboardPage.tsx  dashboardPageAI.tsx  homePage.tsx
frontend/web/src/ux/: styles.ts  (+1 more)
infra/: main.bicep
infra/app/: db-avm.bicep
infra/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
tests/: README.md
(+7 files in other folders)
